# webscraper-projects

./: .gitignore  README.md  crawl.py  main.py  mangapark-scrape.py  nyaa-crawl.py  nyaa-report-20250925.csv  nyaa-report-v1.csv  nyaa-report-v2.csv  nyaa-report.csv  nyaa-scrape.py  nyaa-sync-crawl.py  nyaa_csv_report.py  pyproject.toml  test.html  test_crawl.py
src/scrapper-project/: cli.py
src/scrapper-project/mangapark/: __init__.py  main.py  mangapark-scrape.py
src/scrapper-project/nyaa/: __init__.py  main.py  nyaa_csv_report.py
src/scrapper-project/subplease/: subplease-crawl.py
