[project]
name = "webscrapper-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.12",
    "argparse>=1.4.0",
    "beautifulsoup4==4.13.4",
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "datetime>=5.5",
    "requests==2.32.4",
]
